# DwarfDungeon

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
behaviourlib/src/: BehaviourActions.h  BehaviourManager.cpp  BehaviourManager.h  BehaviourNodes.h  Enemy.cpp  Enemy.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameData.h  MovementManager.cpp  MovementManager.h  PerformanceLogger.cpp  PerformanceLogger.h  PlayerUnitView.cpp  PlayerUnitView.h  SpawnManager.cpp  SpawnManager.h  UIManager.cpp  UIManager.h  enemy.cpp  enemy.h  register_types.cpp  register_types.h
docs/: memory_management.md
dwarfdungeon/: export_presets.cfg  icon.svg.import  main_scene.tscn  node_2d.tscn  project.godot
dwarfdungeon/assets/ai/: enemy_ai.txt
dwarfdungeon/assets/environment/: Cave1_test_TM.png.import  DwarfDungeon_TileMap_normal.png.import  DwarfDungeon_TileMap_specular.png.import
dwarfdungeon/assets/fx/: light_texture.png.import  swrod_fx.png.import
dwarfdungeon/assets/ui/: Retro Gaming.ttf.import  main_ui_theme.tres
dwarfdungeon/assets/units/: MainHero1.2LongHair.png.import
dwarfdungeon/charachters/: Enemy.tscn  Group.tscn  Unit.tscn
dwarfdungeon/scenes/: Arena.tscn  Level_1.tscn  Level_2.tscn  MainMenu.tscn  Shop.tscn
dwarfdungeon/scripts/: Unit.gd  Unit.gd.uid  camera.gd  camera.gd.uid  enemy.gd  group.gd  group.gd.uid
